# TouchpadQtDemo

./: CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  TouchpadHelper.cpp  TouchpadHelper.h  main.cpp
